Removes 'experimental' comments again